# uptop_template

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: message.proto
src/application/topic/: app.rs  request.rs  response.rs
src/domain/topic/: entity.rs  mod.rs  repository.rs
src/infrastructure/: persistence.rs
src/infrastructure/persistence/: user_repository.rs
src/interfaces/: actions.rs  mod.rs  user_handler.rs
